add flex justify center

--- a/index_flex.html
+++ b/index_flex.html
@@ -45,15 +45,17 @@
             </div>
         </div>
 
-        <div class="branch-container">
-            <div class="container-card">
-                <p>Card 1</p>
-            </div>
-            <div class="container-card">
-                <p>Card 2</p>
-            </div>
-            <div class="container-card">
-                <p>Card 3</p>
+        <div class="wrapper">
+            <div class="branch-container">
+                <div class="container-card">
+                    <p>Card 1</p>
+                </div>
+                <div class="container-card">
+                    <p>Card 2</p>
+                </div>
+                <div class="container-card">
+                    <p>Card 3</p>
+                </div>
             </div>
         </div>
     </body>
