--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>1</h1>
-    <h2>2</h2>
-    <h3>3</h3>
-    <h4>4</h4>
-    <h5>5</h5>
-    <h6>6</h6>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusamus necessitatibus ab doloremque minus enim, rerum esse voluptate? Voluptas minima doloribus quas expedita illum aliquid temporibus saepe assumenda ab veniam?</p>
-    
-    <a href="https://google.com">click google</a>
-
-    <img src="https://pbs.twimg.com/profile_images/1455185376876826625/s1AjSxph_400x400.jpg" alt="gambar google">
-
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-    </ul>
-    <ol>
-        <li>a</li>
-        <li>b</li>
-        <li>c</li>
-        <li>d</li>
-    </ol>
-
-    <table>
-        <tr>
-            <th>no</th>
-            <th>name</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Yosua</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>indra</td>
-        </tr>
-    </table>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <div class="card">
+                <img src="https://moladin-evo.s3.ap-southeast-1.amazonaws.com/mcc/mcc-default.jpg" alt="Moladin - MCC Bogor">
+                <div class="desc">
+                    <div>
+                        <h1>MCC Bogor</h1>
+                        <h2>Jl. Raya Tajur No 68 RT.02/RW.04,Kelurahan Pakuan, Kec. Bogor Selatan, Kota Bogor 16134</h2>
+                    </div>
+                    <div>
+                        <p><span>16</span> mobil tersedia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://moladin-evo.s3.ap-southeast-1.amazonaws.com/mcc/mcc-default.jpg" alt="Moladin - MCC Bogor">
+                <div class="desc">
+                    <div>
+                        <h1>MCC Bekasi</h1>
+                        <h2>Axc Summarecon Bekasi Jl Bulevar Blok VC 06 dan Blok VC 02 RT/003 RW/002, Bekasi Utara, Kota Bekasi 17143</h2>
+                    </div>
+                    <div>
+                        <p><span>5</span> mobil tersedia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://moladin-evo.s3.ap-southeast-1.amazonaws.com/mcc/mcc-default.jpg" alt="Moladin - MCC WTC Mangga Dua">
+                <div class="desc">
+                    <div>
+                        <h1>MCC WTC Mangga Dua</h1>
+                        <h2>Bursa Mobil WTC Mangga 2 lantai 6 no 601-603, Jl. Mangga Dua Raya No.8, RW.5, Ancol, Kec. Pademangan, Kota Jkt Utara, Daerah Khusus Ibukota Jakarta 14430</h2>
+                    </div>
+                    <div>
+                        <p><span>6</span> mobil tersedia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
